# tiny-nn

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  main.cpp  nn.cpp  nn.hpp  value.cpp  value.hpp
